# PicoShare

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
src/: main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: particles.tsx  sparkles-text.tsx
src/libs/: utils.ts
src/pages/: home.tsx  layout.tsx
src/pages/auth/: login.tsx
src/pages/errors/: NotFound.tsx
src/router/: router.tsx
src/store/slices/: userSlice.ts
src/styles/: globals.css
