[package]
name = "picoshare"
version = "0.1.0"
description = "A P2P sharing app"
authors = ["PicoShot"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
panic = "unwind"
lto = false
codegen-units = 16
incremental = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
strip = true
opt-level = "z"


[lib]
name = "picoshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

